--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,554 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+body {
+  background-color: white;
+  color: rgb(69, 67, 67);
+  font-family: 'Roboto', sans-serif;
+  /* background-color: rgb(249, 249, 249); */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
+  margin: auto;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  padding-bottom: 2rem;
+  min-width: 420px;
+}
+
+header{
+  width: 100%;
+  height: 8rem;
+  background-image: linear-gradient(  rgb(255, 134, 5), rgb(254, 163, 66));
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+h1 {
+  text-align: center;
+  color: white;
+  width: 100%;
+  font-size: 2rem;
+}
+
+#input-container {
+  position: relative;
+  width: 80%;
+  margin: 6rem 10% 2rem 10%;
+  display: flex;
+  align-items: center;
+  /* justify-content: space-evenly; */
+  text-align: right;
+}
+
+input, #add, select {
+  line-height: 1.7rem;
+  font-size: 1rem;
+  padding: 2px .5rem;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+
+}
+
+#description, #amount {
+  width: 60%;
+  margin-right: 15px;
+}
+
+#add{
+  width: 10%;
+}
+
+#transaction-type  {
+  margin-right: 15px;
+  width: 20%;
+  height: 1.8rem;
+  border:1px solid rgb(255, 134, 5);
+  color: rgb(255, 134, 5);
+  background-color: white;
+
+}
+
+input {
+  border: 1px solid rgb(235, 235, 235);
+}
+
+#warning {
+  display: inline-block;
+  position: absolute;
+  bottom: 2000px;
+  color: red;
+  font-size: .7rem;
+}
+
+#add {
+  background-color: rgb(255, 134, 5);
+  border-color: rgb(255, 134, 5);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+::-webkit-input-placeholder {
+  color: rgb(182, 182, 182);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#main {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  margin: auto;
+  border-radius: 5px;
+  border: 1px solid rgb(255, 134, 5);
+  margin-bottom: 2rem;
+}
+
+.entry-container {
+  width: 50%;
+}
+
+.entry-container  h3, #h3-balance {
+  padding: .7rem;
+  font-weight: normal;
+  color: rgb(255, 134, 5);
+  background-color: white;
+  border-bottom: 1px solid rgb(255, 134, 5);
+  font-size: 1rem;
+}
+
+#income-container{
+  border-right:1px solid rgb(255, 134, 5);
+}
+
+#h3-income {
+  border-top-left-radius: 5px;
+}
+
+#h3-expense {
+  border-top-right-radius: 5px;
+}
+
+#income, #expense {
+  font-size: 1rem;
+  padding: 1rem;
+  text-align: right;
+  background-color: white;
+  overflow-y: scroll; 
+  height: 10rem;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.added{
+  line-height: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  color: gray;
+  text-align: right;
+}
+
+#income::-webkit-scrollbar,  #expense::-webkit-scrollbar {
+  width: 6px;
+  border-left:1px solid rgb(238, 238, 238);
+}
+
+#income::-webkit-scrollbar-thumb, #expense::-webkit-scrollbar-thumb {
+  background-color: rgb(75, 73, 73);
+} 
+
+#balance-container{
+  width: 100%;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+#h3-balance {
+  padding: .7rem;
+  font-weight: normal;
+  color: rgb(255, 134, 5);
+  background-color: white;
+  border-top: 1px solid rgb(255, 134, 5);
+  border-bottom: 1px solid rgb(255, 134, 5);
+  font-size: 1rem;
+}
+
+
+.name {
+  width: 30%;
+  overflow: hidden;
+  text-align: left;
+  padding: 0 .5rem;
+  display: inline-block;
+  text-align: right;
+}
+
+.amountSpan {
+  width: 30%;
+  padding-left: .6rem;
+  display: inline-block;
+  text-align: right;
+  color: black;
+}
+
+#date {
+  font-size: .7rem;
+}
+
+#time {
+  width: 30%;
+  font-size: .7rem;
+}
+
+.total-container {
+  background-color: white;
+  display: flex;
+  padding: .5rem;
+  border-top: 1px solid rgb(235, 235, 235);
+  align-items: baseline;
+  line-height: 1rem;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  font-size: .9rem;
+  color: gray;
+}
+
+.total-container span {
+  text-align: right;
+  padding-left: .5rem;
+}
+
+.total-container button {
+  font-size: 1.3rem;
+}
+
+
+#login-container {
+  width: 60%;
+  margin: auto;
+  
+}
+
+#login-container h1, #login-container h3 {
+  text-align: center;
+  margin: 0;
+  width: 100%;
+  margin-top: 2rem;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#login-container h3 {
+  width: 400px;
+  margin: auto;
+  margin-top: 2rem;
+  height: 5rem;
+  line-height: 3rem;
+}
+
+.form1 {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 2rem 2rem;
+  border: 1px solid rgb(235, 235, 235);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.form1 input {
+  margin: 1rem 0;
+  height: 2.5rem;
+  padding: .5rem;
+  width: 100%;
+}
+
+#login-form{
+  padding-top: 1.3rem;
+} 
+
+#login-form input {
+  margin: 0 auto;
+}
+
+p{
+  width: 70%;
+  text-align: left;
+  display: inline-block;
+  align-self: flex-start;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  color: gray;
+}
+
+#log-in, #sign-up {
+  width: 30%;
+  text-align: right;
+  display: inline-block;
+  align-self: flex-end;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  background-color: rgb(249, 249, 249);
+
+}
+
+#log-in a, #sign-up a {
+  color: rgb(255, 134, 5);
+}
+
+#log-in:hover {
+  color: lightgray;
+}
+
+#log-in:hover {
+  color: lightgray;
+}
+
+#have-account {
+  display: flex;
+  justify-content: space-between;
+}
+
+.submit-button{
+  background-color: rgb(255, 134, 5);
+  height: 2.5rem;
+  color: white;
+  margin: 2rem 0;
+}
+
+#submit-signup:disabled {
+  background-color: gray;
+}
+
+#submit-login {
+  margin-top: 1.7rem;
+}
+
+.validation-message {
+  display: none;
+  color: red;
+  font-size: .8rem;
+  height: .8rem;
+  margin-bottom: -.5rem;
+  padding-left: .3rem;
+}
+
+.helper, #wrong {
+  margin: 0 auto;
+  height: 1.8rem;
+  font-size: .7rem;
+  color: rgb(238, 113, 113, 0); 
+  width: 100%;
+  
+}
+
+#wrong{
+  font-size: .8rem;
+}
+
+.attention {
+  border: 1px solid red;
+}
+
+
+@media only screen and (max-width: 1272px){
+
+  h1{
+    width: 42%;
   }
-  to {
-    transform: rotate(360deg);
+
+  #input-container{
+    width: 57%;
+  }
+
+  #balance-container h3 {
+    border-top-right-radius: 0;
+  }
+
+}
+@media only screen and (max-width: 1087px){
+
+  h1{
+    width: 100%;
+    margin-bottom: 0;
+  }
+
+  /* .total-container{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  */
+
+  .total-container span {
+    width: 70%;
+    text-align: right;
+  }
+/* 
+  #delete-income {
+    width: 30%;
+  }
+
+  #total-income, #total-expense {
+    width: 100%;
+    text-align: right;
+  }  */
+
+ input, select, #add {
+   margin-right: 1rem;
+ }
+
+  main {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  #income-container, #expense-container{
+    width: 50%;
+  }
+
+  #expense-container h3 {
+    border-top-right-radius: 5px;
+  }
+
+  #balance-container {
+    width: 100%;
+    height: 0;
+  }
+
+  #balance {
+    height: 0;
+    padding: 0;
+  }
+
+  #balance-container .total-container span {
+    text-align: left;
+  }  
+
+  #balance-container  #total-balance {
+    text-align: right;
+  }
+
+
+
+  #balance-container .total-container {
+    margin-bottom: 2rem;
   }
 }
+
+@media only screen and (max-width: 800px){
+
+  #wrapper {
+    width: 95%;
+  }
+
+  input, select, #add {
+    margin-right: 0;
+  }
+
+  #income-container, #expense-container,#input-container  {
+    width: 100%;
+  }
+
+  #income-container h3 {
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+  }
+
+  #expense-container  h3 ,#input-container h3 {
+    border-radius: 0;
+  }
+}
+
+@media only screen and (max-width: 660px){
+  h1{
+    text-align: center;
+  }
+
+  #input-container{
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (max-width: 640px){
+
+  #login-container,  #login-container h3 {
+    margin: auto;
+    width: 100%;
+  }
+
+  #add {
+    margin-top: 1rem;
+    padding: 0 4.9rem;
+  }
+
+  input, select, #add {
+    width: 48%;
+  }
+
+  #wrapper {
+    width: 98%;
+  }
+
+  #login-container h1{
+    margin: 1rem 0;
+  }
+}
+
+@media only screen and (max-width: 400px){
+
+  #login-container{
+    width: 100%;
+    margin: auto;
+    height: fit-content;
+    font-size: .8rem;
+  }
+
+  .form1, #login-container h3, #login-container h1 {
+    width: 100%;
+    margin: 0;
+    padding: .5rem;
+  }
+
+  #login-container h1{
+    margin: 1rem 0;
+    font-size: 1.5rem;
+  }
+
+  #login-container h3 {
+    font-size: 1rem;
+    line-height: 4rem;
+  }
+
+  .form1 input {
+    width: 90%;
+    margin: 0.5rem auto;
+    font-size: .8rem;
+  }
+
+  .submit-button {
+    width: 90%;
+    margin: 1rem auto;
+    font-size: .8rem;
+  }
+
+  #have-account {
+    width: 90%;
+    margin: auto;
+    font-size: .6rem;
+  }
+
+  #log-in-a {
+    font-size: .8rem;
+  }
+
+  .helper, #wrong{
+    width: 90%;
+  }
+
+  
+}
+
+
