--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ h1 {
   width: 80%;
   margin: 6rem 10% 2rem 10%;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   /* justify-content: space-evenly; */
   text-align: right;
@@ -54,8 +55,12 @@ input, #add, select {
 }
 
 #description, #amount {
-  width: 60%;
+  width: 35.5%;
   margin-right: 15px;
+}
+
+.red {
+  border-color: red;
 }
 
 #add{
@@ -64,24 +69,35 @@ input, #add, select {
 
 #transaction-type  {
   margin-right: 15px;
-  width: 20%;
+  width: 15%;
   height: 1.8rem;
   border:1px solid rgb(255, 134, 5);
   color: rgb(255, 134, 5);
   background-color: white;
-
 }
 
-input {
+.default{
   border: 1px solid rgb(235, 235, 235);
 }
 
-#warning {
-  display: inline-block;
-  position: absolute;
-  bottom: 2000px;
-  color: red;
+.warning {
+  text-align: left;
+  width: 35.5%;
+  color: transparent;
   font-size: .7rem;
+  margin-right: 15px;
+  height: 1rem;
+  padding-left: 5px;
+}
+
+.warning-visible {
+  text-align: left;
+  width: 35.5%;
+  font-size: .7rem;
+  margin-right: 15px;
+  height: 1rem;
+  padding-left: 5px;
+  color: red;
 }
 
 #add {
