--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,6 @@ input, #add, select {
   border-radius: 5px;
   border: none;
   outline: none;
-
 }
 
 #description, #amount {
@@ -60,7 +59,7 @@ input, #add, select {
 }
 
 .red {
-  border-color: red;
+  border: 1px solid red;
 }
 
 #add{
@@ -157,13 +156,59 @@ input, #add, select {
   border-bottom-right-radius: 5px;
 }
 
-.added{
+.added {
   line-height: 1.5rem;
+  height: 1.5rem;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  /* align-items: baseline; */
   color: gray;
+  margin-bottom: 5px;
+}
+
+.added span {
+  height: 100%;
+  line-height: 1.4rem;
+}
+
+.dateAndTime {
+  display: block;
+  width: 30%;
+  text-align: left;
+  font-size: .7rem;
+}
+
+#name {
+  display: block;
+  width: 30%;
+  overflow: hidden;
   text-align: right;
+  padding: 0 .5rem;
+}
+
+#amountSpan {
+  display: block;
+  width: 30%;
+  padding-left: .6rem;
+  text-align: right;
+  font-size: 1rem;
+}
+
+.delete {
+  outline: none;
+  margin: 0;
+  padding: 0;
+  height: 1.3rem;
+  line-height: 1.3rem;
+  width: 1.5rem;
+  font-size: .8rem;
+  color:gray;
+}
+
+.delete img {
+  border: none;
+  height: .9rem;
+  width: .9rem;
 }
 
 #income::-webkit-scrollbar,  #expense::-webkit-scrollbar {
@@ -191,32 +236,6 @@ input, #add, select {
   font-size: 1rem;
 }
 
-
-.name {
-  width: 30%;
-  overflow: hidden;
-  text-align: left;
-  padding: 0 .5rem;
-  display: inline-block;
-  text-align: right;
-}
-
-.amountSpan {
-  width: 30%;
-  padding-left: .6rem;
-  display: inline-block;
-  text-align: right;
-  color: black;
-}
-
-#date {
-  font-size: .7rem;
-}
-
-#time {
-  width: 30%;
-  font-size: .7rem;
-}
 
 .total-container {
   background-color: white;
