--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,10 @@ h1 {
   font-size: 2rem;
 }
 
+form {
+  width: 100%;
+}
+
 #input-container {
   position: relative;
   width: 80%;
@@ -79,7 +83,7 @@ input, #add, select {
   border: 1px solid rgb(235, 235, 235);
 }
 
-.warning {
+.noWarning {
   text-align: left;
   width: 35.5%;
   color: transparent;
