--- a/src/App.css
+++ b/src/App.css
@@ -84,44 +84,53 @@ input,
 }
 
 .red {
+  background: #fbe9e7;
+  border-bottom: 2px solid white;
+}
+
+.red:focus {
   border-bottom: 2px solid rgb(252, 55, 55);
-  background: var(--main-background-color);
+  background: #fbe9e7;
 }
 
 #span-container {
   width: 100%;
-  padding-left: 15.5%;
+  padding-left: 9.3%;
 }
 
-.invisible {
-  width: 29.33%;
+#description-message {
+  width: 33%;
+  margin-right: 14.1%;
   padding: 0.5rem;
   display: inline-block;
   padding-left: 1rem;
-  margin-right: 0.5rem;
-  margin-bottom: 5px;
-  text-align: left;
-  font-size: 0.7rem;
-  color: transparent;
-}
-
-.visible {
-  width: 29.5%;
-  padding: 0.5rem;
-  display: inline-block;
-  padding-left: 1rem;
-  margin-right: 0.5rem;
   margin-bottom: 5px;
   text-align: left;
   font-size: 0.7rem;
   color: rgb(255, 255, 255);
+}
+
+#amount-message {
+  width: 22%;
+  margin-right: 3.5rem;
+  padding: 0.5rem;
+  display: inline-block;
+  padding-left: 1rem;
+  margin-bottom: 5px;
+  text-align: left;
+  font-size: 0.7rem;
+  color: rgb(255, 255, 255);
+}
+
+.visibleDescr,
+.visibleAmnt {
   background: rgb(74, 74, 74);
   position: relative;
-  box-shadow: 1px 1px 2px rgba(128, 128, 128, 0.697);
+  box-shadow: 1px 2px 2px rgba(128, 128, 128, 0.697);
   border-radius: 2px;
 }
 
-.visible::after {
+.visibleDescr::after {
   content: "";
   position: absolute;
   display: block;
@@ -132,6 +141,20 @@ input,
   border-right: 6px solid transparent;
   border-bottom: 6px solid transparent;
   top: 28px;
+  left: 10px;
+}
+
+.visibleAmnt::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  border-top: 6px solid rgb(74, 74, 74);
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  top: 41px;
   left: 10px;
 }
 
@@ -316,7 +339,7 @@ input,
 .delete svg {
   width: 0.9rem;
   height: 0.9rem;
-  margin-top: 2px;
+  margin-top: 3px;
 }
 #incometc {
   border-top: 1px solid var(--main-border-color);
