--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ h1 {
   color: gray;
   width: 100%;
   font-size: 2rem;
-  margin: 1rem 0 1rem;
+  margin: 1rem 0 4rem;
 }
 
 #input-container {
@@ -96,10 +96,12 @@ input,
 #span-container {
   width: 100%;
   padding-left: 9.3%;
+  position: relative;
 }
 
 #description-message {
-  width: 33%;
+  position: absolute;
+  width: 29.5%;
   margin-right: 14.1%;
   padding: 0.5rem;
   display: inline-block;
@@ -108,10 +110,13 @@ input,
   text-align: left;
   font-size: 0.7rem;
   color: rgb(255, 255, 255);
+  left: 9.2%;
+  top: -2.1rem;
 }
 
 #amount-message {
-  width: 22%;
+  position: absolute;
+  width: 20%;
   margin-right: 3.5rem;
   padding: 0.5rem;
   display: inline-block;
@@ -120,6 +125,8 @@ input,
   text-align: left;
   font-size: 0.7rem;
   color: rgb(255, 255, 255);
+  left: 52%;
+  top: -3rem;
 }
 
 .visibleDescr,
