--- a/src/components/Tooltip.css
+++ b/src/components/Tooltip.css
@@ -8,7 +8,7 @@
   text-align: left;
   font-size: 0.7rem;
   color: rgb(255, 255, 255);
-  left: 9.9%;
+  left: 10.2%;
   top: -2.1rem;
 }
 
@@ -22,19 +22,17 @@
   text-align: left;
   font-size: 0.7rem;
   color: rgb(255, 255, 255);
-  left: 52.5%;
+  left: 52.9%;
   top: -3rem;
 }
 
-.visibleDescr,
-.visibleAmnt {
+.visible {
   background: rgb(74, 74, 74);
-  position: relative;
   box-shadow: 1px 2px 2px rgba(128, 128, 128, 0.697);
   border-radius: 2px;
 }
 
-.visibleDescr::after {
+#description-message::after {
   content: "";
   position: absolute;
   display: block;
@@ -48,7 +46,7 @@
   left: 10px;
 }
 
-.visibleAmnt::after {
+#amount-message::after {
   content: "";
   position: absolute;
   display: block;
