--- a/src/components/EntryContainer.css
+++ b/src/components/EntryContainer.css
@@ -65,6 +65,7 @@
   padding: 0 0.5rem;
   overflow: hidden;
   text-align: left;
+  outline: none;
 }
 
 #amount-value {
@@ -107,4 +108,16 @@
 
 .total-container span {
   text-align: right;
+}
+
+.description-entry-input {
+  background: white;
+}
+
+.description-entry-input:focus {
+  background: var(--main-background-color);
+}
+
+.description-entry-input-red {
+  background: #fbe9e7;
 }
