--- a/src/components/EntryContainer.css
+++ b/src/components/EntryContainer.css
@@ -2,11 +2,13 @@
   width: 50%;
 }
 #income-container {
+  position: relative;
   border-top-left-radius: 5px;
   border-bottom: none;
 }
 
 #expense-container {
+  position: relative;
   border-top-right-radius: 5px;
   border-bottom: none;
 }
@@ -19,6 +21,68 @@
   background-color: white;
   font-size: 1rem;
   text-align: right;
+}
+
+#edit-income-tooltip {
+  position: absolute;
+  width: fit-content;
+  padding: 0.5rem;
+  display: inline-block;
+  padding-left: 1rem;
+  margin-bottom: 5px;
+  text-align: left;
+  font-size: 0.7rem;
+  color: rgb(255, 255, 255);
+  left: 35.2%;
+  top: 40px;
+  background: rgb(74, 74, 74);
+  box-shadow: 1px 2px 2px rgba(128, 128, 128, 0.697);
+  border-radius: 2px;
+}
+
+#edit-income-tooltip::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  border-top: 6px solid rgb(74, 74, 74);
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  top: 28px;
+  left: 10px;
+}
+
+#edit-expense-tooltip {
+  position: absolute;
+  width: fit-content;
+  padding: 0.5rem;
+  display: inline-block;
+  padding-left: 1rem;
+  margin-bottom: 5px;
+  text-align: left;
+  font-size: 0.7rem;
+  color: rgb(255, 255, 255);
+  left: 35.2%;
+  top: 40px;
+  background: rgb(74, 74, 74);
+  box-shadow: 1px 2px 2px rgba(128, 128, 128, 0.697);
+  border-radius: 2px;
+}
+
+#edit-expense-tooltip::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  border-top: 6px solid rgb(74, 74, 74);
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  top: 28px;
+  left: 10px;
 }
 
 #expense {
@@ -116,6 +180,10 @@
 
 .description-entry-input:focus {
   background: var(--main-background-color);
+}
+
+.description-entry-input:hover {
+  border: 1px solid var(--main-background-color);
 }
 
 .description-entry-input-red {
