--- a/src/components/AddButton.css
+++ b/src/components/AddButton.css
@@ -4,11 +4,18 @@
   border: none;
   outline: none;
   line-height: 1rem;
-  padding: 17px 1.5rem;
+  padding: 1.05rem 1.5rem;
   background-color: rgb(81, 210, 134);
   color: white;
   box-shadow: 0 2px 2px rgb(228, 228, 228);
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 1.01px;
+}
+
+@media only screen and (max-width: 487px) {
+  #add {
+    padding: 1rem 7.75rem;
+    font-size: 0.9rem;
+  }
 }
