--- a/src/components/CustomDropdown.css
+++ b/src/components/CustomDropdown.css
@@ -2,7 +2,7 @@
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  margin-right: 1.5rem;
+  margin-right: 2.3%;
 }
 
 .custom-dropdown select {
@@ -42,4 +42,26 @@
   right: 1.2em;
   top: 50%;
   margin-top: -0.5em;
+}
+
+@media only screen and (max-width: 1410px) {
+  .custom-dropdown {
+    margin-right: 4%;
+  }
+}
+
+@media only screen and (max-width: 485px) {
+  .custom-dropdown {
+    width: 46%;
+    margin-right: 1.45rem;
+  }
+
+  .custom-dropdown select {
+    padding: 1rem;
+    padding-left: 1.5rem;
+    padding-right: 11.5rem;
+  }
+  .custom-dropdown::before {
+    width: 100%;
+  }
 }
