--- a/src/components/Tooltip.css
+++ b/src/components/Tooltip.css
@@ -1,6 +1,6 @@
 #description-message {
   position: absolute;
-  width: 29.5%;
+  width: 51.2%;
   padding: 0.5rem;
   display: inline-block;
   padding-left: 1rem;
@@ -8,13 +8,13 @@
   text-align: left;
   font-size: 0.7rem;
   color: rgb(255, 255, 255);
-  left: 10.2%;
+  left: 0;
   top: -2.1rem;
 }
 
 #amount-message {
   position: absolute;
-  width: 20%;
+  width: 27%;
   padding: 0.5rem;
   display: inline-block;
   padding-left: 1rem;
@@ -22,7 +22,7 @@
   text-align: left;
   font-size: 0.7rem;
   color: rgb(255, 255, 255);
-  left: 52.9%;
+  left: 52%;
   top: -3rem;
 }
 
@@ -42,8 +42,8 @@
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   border-bottom: 6px solid transparent;
-  top: 28px;
-  left: 10px;
+  top: 1.7rem;
+  left: 0.6rem;
 }
 
 #amount-message::after {
@@ -56,6 +56,135 @@
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   border-bottom: 6px solid transparent;
-  top: 41px;
-  left: 10px;
+  top: 2.57rem;
+  left: 0.6rem;
+}
+
+@media only screen and (max-width: 1255px) {
+  #description-message {
+    width: 50.4%;
+    top: -2.2rem;
+  }
+
+  #description-message:after {
+    top: 1.77rem;
+  }
+
+  #amount-message {
+    width: 26.5%;
+    left: 51%;
+    top: -3rem;
+  }
+}
+
+@media only screen and (max-width: 1124px) {
+  #description-message {
+    width: 43.3%;
+    top: -3rem;
+  }
+
+  #description-message::after {
+    top: 2.55rem;
+    left: 0.6rem;
+  }
+
+  #amount-message {
+    width: 40.5%;
+    left: 44%;
+    top: -3rem;
+  }
+}
+
+@media only screen and (max-width: 879px) {
+  #description-message {
+    width: 44%;
+  }
+
+  #amount-message {
+    width: 40.5%;
+    left: 45%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #description-message {
+    width: 43.9%;
+  }
+
+  #amount-message {
+    width: 40.5%;
+    left: 44.6%;
+  }
+}
+
+@media only screen and (max-width: 655px) {
+  #description-message {
+    width: 41.8%;
+  }
+
+  #amount-message {
+    width: 41.5%;
+    left: 42.4%;
+  }
+}
+
+@media only screen and (max-width: 485px) {
+  #description-message {
+    width: 59%;
+  }
+
+  #amount-message {
+    width: 39.2%;
+    top: -3.85rem;
+    left: 60.9%;
+  }
+
+  #amount-message::after {
+    top: 3.4rem;
+    left: 0.6rem;
+  }
+}
+
+@media only screen and (max-width: 485px) {
+  #description-message {
+    width: 80%;
+    top: -2.5rem;
+  }
+
+  #description-message:after {
+    top: 1.8rem;
+  }
+
+  #amount-message {
+    width: 80%;
+    top: 3rem;
+    left: 0;
+  }
+
+  #amount-message::after {
+    top: 1.8rem;
+    left: 0.6rem;
+  }
+}
+
+@media only screen and (max-width: 485px) {
+  #description-message {
+    width: 80%;
+    top: -2.5rem;
+  }
+
+  #description-message:after {
+    top: 1.8rem;
+  }
+
+  #amount-message {
+    width: 80%;
+    top: 3rem;
+    left: 0;
+  }
+
+  #amount-message::after {
+    top: 1.8rem;
+    left: 0.6rem;
+  }
 }
